test/visibility/import/rename/badNewName.good
badNewName.chpl:5: syntax error: incorrect expression in 'import' list rename, identifier expected
